[gd_scene load_steps=5 format=3 uid="uid://ey4mf020uwht"]

[ext_resource type="Script" uid="uid://cvchxogy6pxch" path="res://Scripts/fishing_pole.gd" id="1_k1n8e"]
[ext_resource type="AudioStream" uid="uid://cqdtpdhastek4" path="res://Sounds/zapsplat_sport_fishing_sinker_tackle_hit_water_plop_001_13669.mp3" id="2_kxfby"]
[ext_resource type="Texture2D" uid="uid://cukb4vabnqi5v" path="res://Art/fishing_free/global.png" id="2_lrj5g"]

[sub_resource type="Curve" id="Curve_kxfby"]
_data = [Vector2(0, 0.483146), 0.0, 0.0, 0, 0, Vector2(0.430851, 0.550562), 0.0, 0.0, 0, 0, Vector2(1, 0.292135), 0.0, 0.0, 0, 0]
point_count = 3

[node name="FishingPole" type="Node2D"]
script = ExtResource("1_k1n8e")
_sound_floater_hits_water = ExtResource("2_kxfby")

[node name="PoleLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 16, -20)
width = 5.0
width_curve = SubResource("Curve_kxfby")
default_color = Color(0.451046, 0.352717, 0.193996, 1)
end_cap_mode = 2

[node name="FishingLine" type="Line2D" parent="."]
points = PackedVector2Array(16, -20, 21, -15, 26, -8, 31, -3, 39, 3, 45, 8, 49, 12, 56, 16, 60, 19, 65, 22)
width = 0.5

[node name="Floater" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Floater"]
texture = ExtResource("2_lrj5g")
region_enabled = true
region_rect = Rect2(48, 48, 16, 16)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"Ambient"
